--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
+body {
+  background-color: #f1f3f5;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px 0;
+  border: 4px solid black;
+  margin: 25px 25px 10px 20px;
+}
+.App-logo {
+  height: 90px;
+  width: auto;
+}
+.article-box {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 25px;
+  column-gap: 25px;
+  margin: 25px 25px 10px 20px;
+}
+.article {
+  background-color: #f8f9fa;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
+}
+.article:hover {
+  transform: translateY(-1.2rem);
+  box-shadow: 0 3.2rem 6.4rem rgb(0 0 0 / 8%);
+}
+.article-picture {
+  height: 250px;
+  width: 100%;
+}
+.article-title {
+  margin: 0;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 1.334;
+  letter-spacing: 0em;
+  margin-bottom: 0.35em;
+}
+/* .article-box div {
+  margin: 10px;
+} */
+
+.article-content {
+  margin: 0;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.43;
+  letter-spacing: 0.01071em;
+  color: rgba(0, 0, 0, 0.6);
 }
 
-.App-link {
-  color: #61dafb;
+.article-link {
+  text-decoration: none;
+}
+.article-link:hover {
+  text-decoration: underline;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* MEDIA QUERIES */
+
+@media (max-width: 59em) {
+  .App-logo {
+    height: 70px;
+    width: auto;
   }
-  to {
-    transform: rotate(360deg);
+  .article-box {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 25px;
+    column-gap: 25px;
+    margin: 25px 25px 10px 20px;
+  }
+}
+
+@media (max-width: 48em) {
+  .article-box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 25px;
+    column-gap: 25px;
+    margin: 25px 25px 10px 20px;
+  }
+}
+
+@media (max-width: 38em) {
+  .App-logo {
+    height: 40px;
+    width: auto;
+  }
+  .article-box {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 25px;
+    column-gap: 25px;
+    margin: 25px 25px 10px 20px;
+  }
+}
+
+@media (max-width: 24em) {
+  .App-logo {
+    height: 30px;
+    width: auto;
   }
 }
